[package]
name = "snake_bevy"
version = "0.1.1"
authors = ["mtKeller (RE||EK iO) <micah.t.keller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.4"
snake_plugin = { path = "crates/snake_plugin", version = "0.1.0" }
