[package]
name = "snake_plugin"
version = "0.1.0"
authors = ["mtKeller <micah.t.keller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bevy = "0.3.0"
snake_game = { path = "../snake_game", version = "0.1.0" }